# Agent

./: README.md  handled.md  main.py  pending.md  pyproject.toml  test.py
prompt/: WorldArbitrationEngine_Huan_Prompt.md  prompt.md  prompt1.md  prompt2.md
src/agent_api/core/: Config.py  MCPHost copy.py  MCPHost.py  __init__.py  agent.py  backend.py
src/agent_api/core/graph/: __init__.py  assist.py  episode_memory.py  graph.py  node.py  state.py  type.py
src/agent_api/core/graph/assist/: assist.py  reflection_persistence.py
src/agent_api/core/tts/: GPT_SoVITS_TTS.py  __init__.py
src/agent_api/gui/: MainWindow.py  main_window.py
src/agent_api/gui/views/: ChatBubble.py  ChatHistoryListView.py  ChatScroll.py  InputBar.py  MainContent.py  Panel.py  __init__.py
src/agent_api/gui/widgets/: Handle.py  InputTextEdit.py  SlideSwitch.py  Splitter.py  __init__.py
src/agent_api/utils/: log.py
src/mcp_host_app/core/: Config.py  MCPHost.py  State.py  __init__.py
src/mcp_host_app/core/tts/: GPT_SoVITS_TTS.py
src/mcp_host_app/gui/: MainWindow.py
src/mcp_host_app/gui/views/: ActivityBar.py  FunctionBar.py  Panel.py  SetView.py  Sidebar.py  TitleBar.py
src/mcp_host_app/utils/: logger.py
